New structure config files
Signed-off-by: Gerben Kroes <gerben@kroesctrl.nl>